--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <div id="app">
+      <app></app>
   </div>
-  <hr />
 
 <!--    libs for stomp and sockjs-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.js"></script>
@@ -22,11 +22,15 @@
 <!--    end libs for stomp and sockjs-->
 <script src="https://unpkg.com/vue@3.2.23"></script>
 <script src="https://unpkg.com/vue-router@4.0.5/dist/vue-router.global.js"></script>
-<script src="https://unpkg.com/vue3-sfc-loader@0.8.4/dist/vue3-sfc-loader.js"></script>
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js/loadmodule.js"></script>
+
+<script src="js/component/navbar.vue.js"></script>
+<script src="js/component/app.vue.js"></script>
+
+<script src="js/component/home.vue.js"></script>
+<script src="js/component/settings.vue.js"></script>
+<script src="js/component/board.vue.js"></script>
+
 <script src="js/main.js"></script>
 <script src="js/script.js"></script>
 </body>
