Create vuejs structure

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,9 +27,13 @@
 <script src="js/component/navbar.vue.js"></script>
 <script src="js/component/app.vue.js"></script>
 
+<script src="js/component/game/create.vue.js"></script>
+<script src="js/component/game/board.vue.js"></script>
+<script src="js/component/game/list.vue.js"></script>
+<script src="js/component/game/join.vue.js"></script>
+<script src="js/component/game/rules.vue.js"></script>
+
 <script src="js/component/home.vue.js"></script>
-<script src="js/component/settings.vue.js"></script>
-<script src="js/component/board.vue.js"></script>
 
 <script src="js/main.js"></script>
 <script src="js/script.js"></script>
