--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,13 +5,18 @@
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <title>Mancala</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Kalah/Mancala BNA</title>
     <!--    <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" rel="stylesheet">    -->
     <link href="css/style.css" rel="stylesheet"></link>
-
 </head>
 <body>
+
+  <img src="images/logo.png" class="logo"/>
   <div id="app">
       <app></app>
   </div>
@@ -34,7 +39,9 @@
 <script src="js/component/game/rules.vue.js"></script>
 
 <script src="js/component/home.vue.js"></script>
+<script src="js/component/about.vue.js"></script>
 
+<script src="js/routes.js"></script>
 <script src="js/main.js"></script>
 <script src="js/script.js"></script>
 </body>
