--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,22 +29,29 @@
 <!-- libs for vue-->
 <script src="https://unpkg.com/vue@3.2.23"></script>
 <script src="https://unpkg.com/vue-router@4.0.5/dist/vue-router.global.js"></script>
-<script src="https://unpkg.com/vuex@3.6.2/dist/vuex.js"></script>
+<script src="https://unpkg.com/vuex@4.0.0/dist/vuex.global.js"></script>
 <!-- end libs for vue-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://unpkg.com/uuid@latest/dist/umd/uuidv4.min.js"></script>
 
 <script src="js/component/navbar.vue.js"></script>
-<script src="js/component/app.vue.js"></script>
 
-<script src="js/component/game/create.vue.js"></script>
-<script src="js/component/game/board.vue.js"></script>
-<script src="js/component/game/list.vue.js"></script>
-<script src="js/component/game/join.vue.js"></script>
-<script src="js/component/game/rules.vue.js"></script>
+<script src="js/view/layout/app.vue.js"></script>
 
-<script src="js/component/home.vue.js"></script>
-<script src="js/component/about.vue.js"></script>
+<script src="js/view/game/index.vue.js"></script>
+<script src="js/view/game/create.vue.js"></script>
+<script src="js/view/game/board.vue.js"></script>
+<script src="js/view/game/list.vue.js"></script>
+<script src="js/view/game/join.vue.js"></script>
+<script src="js/view/game/rules.vue.js"></script>
+
+<script src="js/view/general/about.vue.js"></script>
+<script src="js/view/general/home.vue.js"></script>
+
+<script type="module" src="js/api/api.js"></script>
+<script type="module" src="js/api/auth-api.js"></script>
+<script type="module" src="js/api/game-api.js"></script>
 
 <script type="module" src="js/store.js"></script>
 
