--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,8 +10,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <title>Kalah/Mancala BNA</title>
-    <!--    <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" rel="stylesheet">    -->
+    <!-- libs for stomp and sockjs -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- bootstrap-->
     <link href="css/style.css" rel="stylesheet"></link>
 </head>
 <body>
@@ -32,9 +33,14 @@
 <script src="https://unpkg.com/vuex@4.0.0/dist/vuex.global.js"></script>
 <!-- end libs for vue-->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- libs for bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+<!-- end libs for bootstrap-->
+
 <script src="https://unpkg.com/uuid@latest/dist/umd/uuidv4.min.js"></script>
 
+<!-- scripts for app-->
 <script src="js/component/navbar.vue.js"></script>
 
 <script src="js/view/layout/app.vue.js"></script>
@@ -60,5 +66,6 @@
 
 <script type="module" src="js/routes.js"></script>
 <script type="module" src="js/main.js"></script>
+<!-- scripts for app-->
 </body>
 </html>
