Convert board to component
- Rename board page to play page
- Add new and old board component

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,12 +42,14 @@
 
 <!-- scripts for app-->
 <script src="js/component/navbar.vue.js"></script>
+<script src="js/component/board.vue.js"></script>
+<script src="js/component/board-old.vue.js"></script>
 
 <script src="js/view/layout/app.vue.js"></script>
 
 <script src="js/view/game/index.vue.js"></script>
 <script src="js/view/game/create.vue.js"></script>
-<script src="js/view/game/board.vue.js"></script>
+<script src="js/view/game/play.vue.js"></script>
 <script src="js/view/game/list.vue.js"></script>
 <script src="js/view/game/join.vue.js"></script>
 <script src="js/view/game/rules.vue.js"></script>
