Move game classes to specific files

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,6 +42,10 @@
 
 <!-- scripts for app-->
 <script src="js/component/navbar.vue.js"></script>
+
+<script src="js/component/game.color.js"></script>
+<script src="js/component/game.hole.js"></script>
+<script src="js/component/game.point.js"></script>
 <script src="js/component/board.vue.js"></script>
 
 <script src="js/view/layout/app.vue.js"></script>
