Replace navbar composition api with Object api
- Update main layout structure
- Move welcome message to specific component (with style)
- Create footer message (with style)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,6 +40,8 @@
 
 <!-- scripts for app-->
 <script src="js/component/navbar.vue.js"></script>
+<script src="js/component/welcome-message.vue.js"></script>
+<script src="js/component/footer-message.vue.js"></script>
 
 <script src="js/component/game.color.js"></script>
 <script src="js/component/game.hole.js"></script>
